--- a/secundaria.html
+++ b/secundaria.html
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 m-0 p-0">
-                    <img src="images/secundariamain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                    <img src="images/Secu.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -217,23 +217,23 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu9.jpg">
-                                <img src="images/anglosecu9.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-2.png">
+                                <img src="images/Secu-2.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu2.jpg">
-                                <img src="images/anglosecu2.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-3.png">
+                                <img src="images/Secu-3.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu3.jpg">
-                                <img src="images/anglosecu3.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-4.png">
+                                <img src="images/Secu-4.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
@@ -241,24 +241,24 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu4.jpg">
-                                <img src="images/anglosecu4.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-5.png">
+                                <img src="images/Secu-5.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu10.jpg">
-                                <img src="images/anglosecu10.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-6.png">
+                                <img src="images/Secu-6.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglosecu6.jpg">
-                                <img src="images/anglosecu6.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Secu-7.png">
+                                <img src="images/Secu-7.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
