--- a/bachillerato.html
+++ b/bachillerato.html
@@ -112,22 +112,18 @@
                         </div>
                     <div class="text-justify">
                         <p>
-                        <!-- Bachillerato Anglo tiene un sistema de enseñanza basado  -->
                         Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
                         herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
                         personal, universitario y profesional.</p>
-                        <!-- <p>Inglés intensivo, moderno y eficiente en donde nuestros alumnos adquieren un excelente nivel de lenguaje oral y escrito.</p> -->
                         <p>Formación colaborativa, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
                         trabajo comunitario son pilares en Bachillerato Anglo.</p>
-                        <!-- <p>Creativity Fair, es un espacio para la exposición de proyectos con la asistencia de la comunidad estudiantil del
-                        colegio, de padres de familia y de escuelas locales, así como nuestro Anglo Science Club.</p> -->
                         <p>Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
                         nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.</p>
                         <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 ">
-                    <img src="images/prepamain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                    <img src="images/Prepa.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -218,23 +214,23 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato1.jpg">
-                                <img src="images/anglobachillerato1.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-0.png">
+                                <img src="images/Prepa-0.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato2.jpg">
-                                <img src="images/anglobachillerato2.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-5.png">
+                                <img src="images/Prepa-5.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato3.jpg">
-                                <img src="images/anglobachillerato3.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-3.png">
+                                <img src="images/Prepa-3.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
@@ -242,24 +238,24 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato4.jpg">
-                                <img src="images/anglobachillerato4.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-7.png">
+                                <img src="images/Prepa-7.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato5.jpg">
-                                <img src="images/anglobachillerato5.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-6.png">
+                                <img src="images/Prepa-6.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglobachillerato8.jpg">
-                                <img src="images/anglobachillerato8.jpg" alt="Park" class="card-img-top img-fluid rounded-sm">
+                            <a class="lightbox" href="images/Prepa-2.png">
+                                <img src="images/Prepa-2.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
