--- a/extraescolares.html
+++ b/extraescolares.html
@@ -99,13 +99,13 @@
 
 
 
-  <div class="text-center mt-5 mb-3">
+  <div class="text-center my-5">
     <h1 class="text-center">ACTIVIDADES EXTRAESCOLARES</h1>
     <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
   </div>
 
     <div class="container">
-        <div class="row pb-5 pt-3 d-flex align-items-center">              
+        <div class="row pb-0 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
                 <p>
@@ -122,14 +122,14 @@
             
             </div>
             <div class="col-12 col-lg-6 text-center">
-                <img src="images/steamlogo.png" class="img-fluid rounded-sm" alt="Responsive image">
+                <img src="images/anglokinder9.jpg" class="img-fluid rounded-sm" alt="Responsive image">
             </div>
         </div>
     
     </div>
 
 
-  <section class="text-center my-3">
+  <section class="text-center my-3 py-5">
         <!-- Section heading -->
         <div class=" my-5 pb-3">
             <h2 class="h1-responsive font-weight-bold">Disfruta de tus deportes favoritos</h2>
@@ -139,26 +139,21 @@
             <div class="row pb-3">
                 <!-- Grid column -->
                 <div class="col-6 col-md">
-                    <img src="images/loupe.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Indagadores</h5>
-                    <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
-                        aprendizaje.</p>
+                    <img src="images/basquetbol.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Basquetbol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
-                    <img src="images/help.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
+                    <img src="images/danza.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Danza</h5>
                     </p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
-                    <img src="images/innovation.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Pensadores</h5>
-                    <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
-                        crítica y creativa</p>
+                    <img src="images/Futbol.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Futbol</h5>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -169,26 +164,22 @@
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-6 col-md">
-                    <img src="images/charity.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
-                    <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
-                    sentimientos de los demás.</p>
+                    <img src="images/Voleybol.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Voleybol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
-                    <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Audaces</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p>
+                    <img src="images/natacion.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Natación</h5>
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/openmind.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
-                    <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
-                        personas y comunidades.</p>
+                <div class="col-6 col-md my-3">
+                    <img src="images/gym.png" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Acondicionamiento Físico</h5>
+                    <p class="grey-text mb-md-0 mb-5">(Bachillerato)</p>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -196,36 +187,6 @@
         </div>
     </section>
 
-<!-- 
-  <div class="container">
-    <div class="row">
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card mx-5" style="width: 18rem;">
-        <img class="card-img-top" src="images/cambridge.webp" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
       <div class="container">
