--- a/inscripciones.html
+++ b/inscripciones.html
@@ -110,20 +110,20 @@
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/kindermain.jpg" alt="" style="max-width:100%;" class="rounded">
-                    <h5 class="font-weight-bold mt-2">PreKinder / Kindergarten</h5>
+                    <img src="images/Ins-kinder.png" alt="" style="max-width:100%;" class="rounded">
+                    <h3 class="font-weight-bold mt-2">PreKinder / Kindergarten</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Prekinder/Kindergarten</button></a>
                     </div>
 
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/primaria.webp" alt="" style="max-width:100%;" class="rounded">
-                    <h5 class="font-weight-bold mt-2">Primaria</h5>
+                    <img src="images/Ins-primaria.png" alt="" style="max-width:100%;" class="rounded">
+                    <h3 class="font-weight-bold mt-2">Primaria</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requsitos_PrimariaCiclo20-21.pdf " target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requsitos_PrimariaCiclo20-21.pdf " target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Primaria</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
@@ -135,22 +135,19 @@
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/secundaria.webp" alt="" style="max-width:100%;" class="rounded">
-                    <h5 class="font-weight-bold mt-2">Secundaria</h5>
-                    <p class="grey-text mb-md-0 mb-2">Muestran empatía, sensibilidad y respeto por las necesidades y
-                    sentimientos de los demás.</p>
+                    <img src="images/Ins-Secu.png" alt="" style="max-width:100%;" class="rounded">
+                    <h3 class="font-weight-bold mt-2">Secundaria</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos_Secundaria_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos_Secundaria_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Secundaria</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/preparatoria.webp" alt="" style="max-width:100%;" class="rounded">
-                    <h5 class="font-weight-bold mt-2">Preparatoria</h5>
-                    <p class="grey-text mb-md-0 mb-2">Exploran nuevos roles, ideas y estrategias.</p>
+                    <img src="images/Ins-Prepa.png" alt="" style="max-width:100%;" class="rounded">
+                    <h3 class="font-weight-bold mt-2">Preparatoria</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos _Bachillerato_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos _Bachillerato_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Bachillerato</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
