--- a/prekinder.html
+++ b/prekinder.html
@@ -126,42 +126,29 @@
     </section>
 <!--main-->
 <hr>
-    <div class="container my-5">
+    <div class="container pb-4 my-5">
             <h2 class="h1-responsive font-weight-bold mt-5 text-center">Explorando el mundo para un futuro mejor</h2>
             <p class="page-description text-center">Nuestros alumnos de prekinder estarán inmersos en un ambiente bilingüe y transdisciplinario 
             que promueve la exploración y le ayudará a desarrollarse en 4 competencias principales:</p>
         <div class="row my-4 text-center">
-            <div class="col-12 col-md">
+            <div class="col-12 col-md mb-4">
                     <img src="images/puzzle.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold m-1">Cognitiva</h5>
-                    <!-- <h5 class="font-weight-bold m-0">Intensivo</h5> -->
-                    <!-- <p class="grey-text mb-md-0 mt-4 mb-5">Mediante dinámicas y estrategias de aprendizaje que involucran juegos, actividades, 
-                    arte y música, fomentamos el aprendizaje para interactuar más con su alrededor, desarrollando más su capacidad de entender 
-                    información del mundo mediante sus sentidos.</p> -->
             </div>
-            <div class="col-12 col-md">
+            <div class="col-12 col-md mb-4">
                     <img src="images/empathy.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold m-1">Socioemocional</h5>
-                    <!-- <h5 class="font-weight-bold m-0">Intensivo</h5> -->
-                    <!-- <p class="grey-text mb-md-0 mt-4 mb-5">Un desarrollo emocional correcto y es fundamental para que el niño alcance el nivel 
-                    suficiente de inteligencia emocional, que es la habilidad esencial de las personas para atender y percibir los sentimientos 
-                    de forma apropiada y precisa.</p> -->
+
             </div>
-            <div class="col-12 col-md">
+            <div class="col-12 col-md mb-4">
                     <img src="images/kids.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold m-1">Psicomotriz</h5>
-                    <!-- <h5 class="font-weight-bold m-0">Intensivo</h5> -->
-                    <!-- <p class="grey-text mb-md-0 mt-4 mb-5">A través de actividades grupales, juegos rítmicos, de habilidades, destreza,  procesos 
-                    de aprendizaje, música y baile, ayuda al desarrollo cognitivo social, físico y emocional del niño para formar 
-                    niños indagadores, valientes y seguros de sí mismos.</p> -->
+
             </div>
-            <div class="col-12 col-md">
+            <div class="col-12 col-md mb-4">
                 <img src="images/success.svg" alt="" style="max-width:35%;"  class="mb-3">
                 <h5 class="font-weight-bold m-1">Adaptación al Medio</h5>
-                <!-- <h5 class="font-weight-bold m-0">Intensivo</h5> -->
-                <!-- <p class="grey-text mb-md-0 mt-4 mb-5">Explorar, jugar, trabajar en equipo y aprender, forman parte de los retos que los pequeños 
-                    tienen cada día y es por eso que apoyamos en su desarrollo durante estas actividades, para que la adaptación a cualquier situación
-                    forme parte de sus logros.</p> -->
+
         </div>
         </div>
     </div>
