--- a/primaria.html
+++ b/primaria.html
@@ -135,41 +135,34 @@
     <section class="text-center my-3">
             <!-- Section heading -->
             <div class=" my-5">
-            <h2 class="h1-responsive font-weight-bold">ANATOMÍA IB</h2>
-            <p class="page-description text-center">Cualidades que el alumno adquiere en su formación IB.</p>
+            <h2 class="h1-responsive font-weight-bold">La enseñanza a través de la diversión</h2>
+            <p class="page-description text-center">Todos los pequeños se divierten a través de las siguientes clases.</p>
         </div>
             <div class="container">
                 <!-- Grid row -->
                 <div class="row pb-3">
                     <!-- Grid column -->
-                    <div class="col-6 col-md">
-                        <img src="images/loupe.svg" alt="" style="max-width:35%;">
-                        <h5 class="font-weight-bold mt-2">Indagadores</h5>
-                        <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
-                            aprendizaje.</p>
+                    <div class="col-12 col-sm-6 col-lg">
+                        <img src="images/computacion.png" alt="" style="max-width:60%;">
+                        <h5 class="font-weight-bold mt-2">Computación</h5>
                     </div>
                     <!-- Grid column -->
                     <!-- Grid column -->
-                    <div class="col-6 col-md">
-                        <img src="images/help.svg" alt="" style="max-width:35%;">
-                        <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
-                        <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
-                        </p>
+                    <div class="col-12 col-sm-6 col-lg">
+                        <img src="images/educacion-fisica.png" alt="" style="max-width:60%;">
+                        <h5 class="font-weight-bold mt-2">Educación Física</h5>
                     </div>
                     <!-- Grid column -->
                     <!-- Grid column -->
-                    <div class="col-6 col-md">
-                        <img src="images/innovation.svg" alt="" style="max-width:35%;">
-                        <h5 class="font-weight-bold mt-2">Pensadores</h5>
-                        <p class="grey-text mb-0 mb-5">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
-                            crítica y creativa</p>
+                    <div class="col-12 col-sm-6 col-lg">
+                        <img src="images/biblioteca.png" alt="" style="max-width:60%;">
+                        <h5 class="font-weight-bold mt-2">Biblioteca</h5>
                     </div>
                     <!-- Grid column -->
                     <!-- Grid column -->
-                    <div class="col-6 col-md">
-                        <img src="images/comunicadores.svg" alt="" style="max-width:35%;">
-                        <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
-                        <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p>
+                    <div class="col-12 col-sm-6 col-lg">
+                        <img src="images/artes.png" alt="" style="max-width:60%;">
+                        <h5 class="font-weight-bold mt-2">Artes</h5>
                     </div>
                     <!-- Grid column -->
                 </div>
@@ -196,16 +189,16 @@
                 <h1 class="text-center">Elementary School Life</h1>
                 <p class="page-description text-center">Momentos ANGLO</p>
                 <div class="tz-gallery">
-                    <div class="row mb-3">
+                    <div class="row">
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-1.png">
                                     <img src="images/Primaria-1.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-2.png">
                                     <img src="images/Primaria-2.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
@@ -213,7 +206,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-3.png">
                                     <img src="images/Primaria-3.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
@@ -222,7 +215,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-4.png">
                                     <img src="images/Primaria-4.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
@@ -230,7 +223,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-5.png">
                                     <img src="images/Primaria-5.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
@@ -238,7 +231,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <div class="card">
+                            <div class="card mb-3">
                                 <a class="lightbox" href="images/Primaria-7.png">
                                     <img src="images/Primaria-7.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
