--- a/secundaria.html
+++ b/secundaria.html
@@ -108,7 +108,6 @@
                     </div>
                     <div class="text-justify">
                        <p>
-                           <!-- Secundaria Anglo fortalece  -->
                         Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
                         creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
                         conocimientos y actitudes para la vida.</p> 
@@ -141,7 +140,7 @@
             <div class="row ">
 
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg">
                     <img src="images/english.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold m-1">Inglés</h5>
                     <h5 class="font-weight-bold m-0">Intensivo</h5>
@@ -150,7 +149,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg">
                     <img src="images/3dprinter.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Aula</h5>
                     <h5 class="font-weight-bold m-0"> makersteam </h5>
@@ -160,7 +159,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg">
 
                     <img src="images/psychologist.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Apoyo</h5>
@@ -170,7 +169,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg">
                     <img src="images/education.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold my-1">Acción</h5> 
                     <h5 class="font-weight-bold m-0">Tutorial</h5>
@@ -180,7 +179,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg">
                     <img src="images/chip.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold my-1">Anglo</h5> 
                     <h5 class="font-weight-bold m-0">PRO</h5>
@@ -214,24 +213,24 @@
             <h1 class="text-center">Junior School Life</h1>
             <p class="page-description text-center">Momentos Anglo</p>
             <div class="tz-gallery">
-                <div class="row mb-3">
+                <div class="row">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Secu-2.png">
                                 <img src="images/Secu-2.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
-                            <a class="lightbox" href="images/Secu-3.png">
-                                <img src="images/Secu-3.png" alt="Park" class="card-img-top rounded-sm">
+                        <div class="card mb-3">
+                            <a class="lightbox" href="images/Secu-6.png">
+                                <img src="images/Secu-6.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Secu-4.png">
                                 <img src="images/Secu-4.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
@@ -240,7 +239,7 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Secu-5.png">
                                 <img src="images/Secu-5.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
@@ -248,15 +247,15 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
-                            <a class="lightbox" href="images/Secu-6.png">
-                                <img src="images/Secu-6.png" alt="Park" class="card-img-top rounded-sm">
+                        <div class="card mb-3">
+                            <a class="lightbox" href="images/Secu-3.png">
+                                <img src="images/Secu-3.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Secu-7.png">
                                 <img src="images/Secu-7.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
